IS 6.1.0 Alpha2 Perf Test